# nexus

./: .gitignore  .swm  .swn  CLAUDE.md  Cargo.toml  SHELL_COMPLETENESS_PLAN.md  coverage-by-file.sh  coverage-summary.sh  full-specification.md  markdown-demo.md  missed-opportunities.txt  readme.md
nexus-agent/: Cargo.toml  RECONNECT.md
nexus-agent/src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  persistence.rs  pty.rs  relay.rs  session.rs  types.rs
nexus-agent/src/acp/: agent.rs  explorer.rs  terminal_executor.rs  types.rs
nexus-agent/src/agent/: persistence.rs  runner.rs  sub_agent.rs  tests.rs
nexus-agent/src/app/: mod.rs
nexus-agent/src/mcp/: handler.rs  resources.rs  tests.rs
nexus-agent/src/permissions/: mod.rs
nexus-agent/src/session/: instance.rs  manager.rs  mod.rs
nexus-agent/src/tests/: format_on_save_tests.rs  gitignore_tests.rs  integration_tests.rs  mocks.rs  sandbox_tests.rs  utils.rs
nexus-agent/src/tools/: formatter.rs  parse.rs  parser_registry.rs  tests.rs  types.rs
nexus-agent/src/tools/core/: config.rs  tool.rs
nexus-agent/src/tools/impls/: edit.rs  execute_command.rs  list_files.rs  (+6 more)
nexus-agent/src/ui/: backend.rs  mod.rs  ui_events.rs
nexus-agent/src/utils/: content.rs
nexus-claude/: Cargo.toml
nexus-claude/src/: block.rs  lib.rs  process.rs
nexus-client/: Cargo.toml
nexus-client/src/: event_bridge.rs  input_buffer.rs  lib.rs  reconnect.rs  transport.rs
nexus-fs/: Cargo.toml
nexus-fs/src/: explorer.rs  types.rs
nexus-kernel/: Cargo.toml
nexus-kernel/src/: completion.rs  error.rs  lib.rs  persistence.rs  shell_history.rs  state.rs
nexus-kernel/src/commands/: base64_cmd.rs  basic.rs  cat.rs  chmod.rs  claude.rs  clip.rs  cmp.rs  curl.rs  cut.rs  date.rs  df.rs  diff.rs  dig.rs  du.rs  env.rs  find.rs  fs.rs  git.rs  grep.rs  hash.rs  head.rs  help.rs  history.rs  iterators.rs  jobs.rs  json.rs  less.rs  link.rs  links.rs  ls.rs  man.rs  math.rs  mod.rs  nl.rs  open.rs  path.rs  perms.rs  ping.rs  prev.rs  printf.rs  (+22 more)
nexus-kernel/src/eval/: builtins.rs  expand.rs  mod.rs
nexus-kernel/src/parser/: ast.rs  mod.rs
nexus-kernel/src/process/: job.rs  mod.rs  pty.rs
nexus-kernel/tests/: pipeline_tests.rs
nexus-llm/: Cargo.toml
nexus-llm/src/: anthropic.rs  openai.rs  provider_config.rs
nexus-llm/src/aicore/: anthropic.rs
nexus-protocol/: Cargo.toml
nexus-protocol/src/: codec.rs  lib.rs  messages.rs  types.rs
nexus-test-harness/: Cargo.toml  README.md
nexus-test-harness/docker/: Dockerfile  id_test  id_test.pub
nexus-test-harness/src/: assertions.rs  client.rs  container.rs  lib.rs  network.rs
nexus-test-harness/tests/: slice10_reconnect_edge.rs  slice11_reconnect_robustness.rs  slice1_infra.rs  slice2_happy_path.rs  slice3_chaos.rs  slice4_resume.rs  slice5_concurrency.rs  slice6_buffers.rs  slice7_degraded.rs  slice8_lifecycle.rs  slice9_files.rs
nexus-ui/: Cargo.toml
nexus-ui/assets/: Info.plist  Nexus.sdef
nexus-ui/examples/: strata_demo.rs
nexus-ui/src/: agent_adapter.rs  agent_block.rs  agent_widgets.rs  app.rs  claude_cli.rs  claude_panel.rs  constants.rs  glyph_cache.rs  lib.rs  main.rs  markdown.rs  mcp_proxy.rs  msg.rs  nexus_app.rs  nexus_widgets.rs  pty.rs  shell_context.rs  state.rs  theme.rs
nexus-ui/src/actions/: mod.rs  registry.rs  types.rs
nexus-ui/src/app/: actions.rs  message.rs  mod.rs  orchestrator.rs  policy.rs  routing.rs  tests.rs  update.rs  update_context.rs  view.rs
nexus-ui/src/blocks/: mod.rs  model.rs
nexus-ui/src/components/: block.rs  block_list.rs  input_line.rs  lens.rs  mod.rs
nexus-ui/src/context/: error_parser.rs  mod.rs  providers.rs
nexus-ui/src/data/: agent_block.rs  blocks.rs  context.rs  jobs.rs  mod.rs  project.rs  providers.rs
nexus-ui/src/features/: mod.rs
nexus-ui/src/handlers/: agent.rs  history.rs  input.rs  mod.rs  terminal.rs  window.rs
nexus-ui/src/infra/: mod.rs  pty_driver.rs  scripting.rs
nexus-ui/src/keymap/: keys.rs  mod.rs
nexus-ui/src/nexus_app/: agent.rs  block_manager.rs  colors.rs  completion.rs  context_menu.rs  drag_state.rs  event_routing.rs  file_drop.rs  history_search.rs  input.rs  jobs.rs  message.rs  mod.rs  pty_backend.rs  scroll_model.rs  selection.rs  shell.rs  source_ids.rs  state_policy.rs  state_update.rs  state_view.rs  tests.rs  transient_ui.rs  update_context.rs
nexus-ui/src/shaders/: terminal.wgsl
nexus-ui/src/strata/: app.rs  content_address.rs  demo.rs  demo_widgets.rs  event_context.rs  layout_snapshot.rs  mod.rs  nexus_app.rs  nexus_widgets.rs  primitives.rs  scroll_state.rs  text_engine.rs  text_input_state.rs  widget.rs
nexus-ui/src/systems/: agent.rs  kernel.rs  mod.rs  permission_server.rs  pty.rs
nexus-ui/src/ui/: context_menu.rs  input.rs  markdown.rs  mod.rs  scroll.rs  shell_view.rs  theme.rs  transient.rs  value_view.rs
nexus-ui/src/utils/: formatting.rs  ids.rs  mod.rs  path.rs  text.rs
nexus-ui/src/view_model/: block.rs  mod.rs  store.rs
nexus-ui/src/widgets/: agent_block.rs  input.rs  job_bar.rs  job_indicator.rs  mod.rs  shell_block.rs  table.rs  terminal_shader.rs  terminal_view.rs  tool.rs  value_renderer.rs  view_context.rs  welcome.rs
nexus-ui/tests/: osc_integration.rs
nexus-web/: Cargo.toml
strata/: Cargo.toml  GETTING_STARTED.md  README.md
strata/src/: app.rs  content_address.rs  demo.rs  demo_widgets.rs  event_context.rs  frame_timing.rs  layout_snapshot.rs  lib.rs  primitives.rs  scroll_state.rs  text_engine.rs  text_input_state.rs  widget.rs
strata/src/component/: component_app.rs  id_space.rs  mod.rs  slot.rs
strata/src/gpu/: glyph_atlas.rs  metal_pipeline.rs  mod.rs  pipeline.rs  wgpu_pipeline.rs
strata/src/layout/: base.rs  cache.rs  canvas.rs  child.rs  column.rs  constraints.rs  containers.rs  context.rs  elements.rs  flex.rs  flow.rs  length.rs  list_view.rs  mod.rs  primitives.rs  row.rs  scroll_column.rs  table.rs  text_input.rs
strata/src/platform/: macos.rs  mod.rs
strata/src/shell/: iced_adapter.rs  linux_backend.rs  mod.rs  native_backend.rs  populate.rs  subscription.rs
strata/src/widgets/: mod.rs  terminal.rs  text.rs
(+116 files in other folders)
