[workspace]
resolver = "2"
members = [
    "nexus-kernel",
    "nexus-pump",
    "nexus-term",
    "nexus-ui",
    "nexus-api",
    "nexus-providers",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevin/nexus"

[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Kernel dependencies
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
portable-pty = "0.8"

# Pump dependencies
memmap2 = "0.9"

# Terminal state (headless ANSI parsing)
alacritty_terminal = "0.25"

# UI dependencies (Iced + WGPU)
iced = { version = "0.13", features = ["tokio", "advanced", "wgpu"] }
cosmic-text = "0.12"

# Internal crates
nexus-api = { path = "nexus-api" }
nexus-kernel = { path = "nexus-kernel" }
nexus-pump = { path = "nexus-pump" }
nexus-term = { path = "nexus-term" }
