[workspace]
resolver = "2"
members = [
    "nexus-kernel",
    "nexus-term",
    "nexus-ui",
    "nexus-api",
    "strata",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevin/nexus"

[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Kernel dependencies
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
libc = "0.2"
portable-pty = "0.8"
regex = "1.10"
base64 = "0.22"
gethostname = "0.5"
rand = "0.8"
filetime = "0.2"
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"

# Terminal state (headless ANSI parsing)
alacritty_terminal = "0.25"

# UI dependencies (Iced + WGPU)
# "lazy" feature enables cached/memoized widget rendering for performance
# Use wgpu-only (no tiny-skia fallback) to enable Shader widget
iced = { version = "0.14", default-features = false, features = ["tokio", "advanced", "wgpu", "lazy", "image"] }
cosmic-text = "0.12"
arboard = "3.4"  # Cross-platform clipboard
dirs = "5.0"  # Platform-specific directories (home, config, etc.)
urlencoding = "2.1"  # URL encoding/decoding for file:// URLs
unicode-width = "0.2"  # Unicode display width calculation (CJK, emoji)
bytemuck = { version = "1.14", features = ["derive"] }  # Safe transmutes for GPU buffers
wgpu = "23.0"  # GPU access (same version Iced uses)

# Internal crates
nexus-api = { path = "nexus-api" }
nexus-kernel = { path = "nexus-kernel" }
nexus-term = { path = "nexus-term" }
strata = { path = "strata" }

# Local patches for flicker-free macOS window resize:
# - wgpu-hal v27: presentsWithTransaction so compositor waits for each frame
#   (iced_wgpu uses wgpu v27, NOT v23 — must patch the v27 hal)
# - iced_winit: synchronous render during modal resize loop
[patch.crates-io]
wgpu-hal = { path = "patches/wgpu-hal-27" }
iced_winit = { path = "patches/iced_winit" }
