[workspace]
resolver = "2"
members = [
    "nexus-kernel",
    "nexus-term",
    "nexus-ui",
    "nexus-api",
    "strata",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kevin/nexus"

[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Kernel dependencies
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
libc = "0.2"
portable-pty = "0.8"
regex = "1.10"
base64 = "0.22"
gethostname = "0.5"
rand = "0.8"
filetime = "0.2"
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"

# Terminal state (headless ANSI parsing)
alacritty_terminal = "0.25"

# UI dependencies (native macOS backend + Metal)
cosmic-text = "0.12"
arboard = "3.4"  # Cross-platform clipboard
dirs = "5.0"  # Platform-specific directories (home, config, etc.)
urlencoding = "2.1"  # URL encoding/decoding for file:// URLs
unicode-width = "0.2"  # Unicode display width calculation (CJK, emoji)
bytemuck = { version = "1.14", features = ["derive"] }  # Safe transmutes for GPU buffers

# Internal crates
nexus-api = { path = "nexus-api" }
nexus-kernel = { path = "nexus-kernel" }
nexus-term = { path = "nexus-term" }
strata = { path = "strata" }
