[package]
name = "nexus-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[dependencies]
nexus-api = { workspace = true }
nexus-kernel = { workspace = true }
nexus-protocol = { workspace = true }
nexus-term = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmp-serde = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
gethostname = { workspace = true }
uuid = { workspace = true }
