[package]
name = "nexus-claude"
version.workspace = true
edition.workspace = true
description = "Native Claude Code UI integration for Nexus - headless JSON streaming"

[dependencies]
nexus-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
claude-codes = { version = "2", default-features = false, features = ["async-client"] }
futures = "0.3"
