[package]
name = "nexus-fs"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
nexus-executor = { path = "../nexus-executor" }
content_inspector = "0.2.4"
encoding_rs = "0.8"
glob = "0.3"
ignore = "0.4"
regex.workspace = true
serde.workspace = true
tracing.workspace = true
path-clean = "1.0"

[dev-dependencies]
tempfile = "3.13"
tokio.workspace = true
