[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
gethostname = { workspace = true }
rand = { workspace = true }
filetime = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
