[package]
name = "nexus-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio.workspace = true
futures = "0.3"
tracing.workspace = true
oauth2 = "4.4"
base64 = "0.21"
keyring = "2.3"
chrono.workspace = true
tempfile = "3.23"
thiserror.workspace = true
regex.workspace = true
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
axum = "0.7"
bytes = "1.10"
