[package]
name = "nexus-test-harness"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-protocol = { path = "../nexus-protocol" }
nexus-api = { path = "../nexus-api" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
dirs = "5.0"
