[package]
name = "nexus-ui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-api = { workspace = true }
nexus-kernel = { workspace = true }
nexus-term = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
iced = { workspace = true }
portable-pty = { workspace = true }
arboard = { workspace = true }  # Clipboard support
image = { workspace = true }  # Image processing for clipboard images
fontdue = { workspace = true }  # Glyph rasterization for GPU atlas
bytemuck = { workspace = true }  # Safe transmutes for GPU buffers
wgpu = { workspace = true }  # GPU access for custom shaders
nix = { workspace = true }  # Unix signal handling for CLI cancellation
