[package]
name = "nexus-ui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-api = { workspace = true }
nexus-kernel = { workspace = true }
nexus-term = { workspace = true }
strata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
iced = { workspace = true }
portable-pty = { workspace = true }
arboard = { workspace = true }  # Clipboard support
image = { workspace = true }  # Image processing for clipboard images
nix = { workspace = true }  # Unix signal handling for CLI cancellation
similar = "2"  # Myers diff algorithm for Edit tool rendering
unicode-width = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }  # Markdown parsing
