[package]
name = "nexus-ui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-api = { workspace = true }
nexus-kernel = { workspace = true }
nexus-client = { path = "../nexus-client" }
nexus-protocol = { workspace = true }
nexus-term = { workspace = true }
strata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = "0.1"
chrono = { workspace = true }
portable-pty = { workspace = true }
arboard = { workspace = true }  # Clipboard support
image = { workspace = true }  # Image processing for clipboard images
nix = { workspace = true }  # Unix signal handling for CLI cancellation
similar = "2"  # Myers diff algorithm for Edit tool rendering
unicode-width = { workspace = true }
rmp-serde = { workspace = true }
base64 = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }  # Markdown parsing

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSWindow", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSGeometry", "NSObject", "NSDictionary", "NSValue"] }
