[package]
name = "nexus-web"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
futures = "0.3"
htmd = "0.1.6"
percent-encoding = "2.3"
regex.workspace = true
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.18"
serde.workspace = true
serde_json.workspace = true
tempfile = "3.23"
tokio.workspace = true
url = "2.5"

[dev-dependencies]
axum = "0.7"
