[package]
name = "strata"
version.workspace = true
edition.workspace = true

[dependencies]
cosmic-text = { workspace = true }
unicode-width = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
lru = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
objc2 = "0.5"
block2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSWindow", "NSView", "NSPasteboard", "NSDragging", "NSEvent", "NSImage", "NSDraggingItem", "NSDraggingSession", "NSPasteboardItem", "NSWorkspace", "NSTextField", "NSFont", "NSColor", "NSBitmapImageRep", "NSGraphicsContext", "NSControl", "NSMenu", "NSMenuItem", "NSRunningApplication", "NSGraphics", "NSResponder"] }
objc2-foundation = { version = "0.2", features = ["NSURL", "NSArray", "NSString", "NSGeometry", "NSThread", "NSEnumerator"] }
metal = "0.29"
core-graphics-types = "0.1"
